observability/traefik/routes/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: observability
  hostnames:
    - grafana.benuino.eu.org
  rules:
    - backendRefs:
        - name: grafana
          port: 80
