observability/traefik/routes/jaeger-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata: 
  name: jaeger
  namespace: observability
spec: 
  parentRefs:
    - name: observability
  hostnames: 
    - jaeger.benuino.eu.org
  rules: 
    - backendRefs:
        - name: jaeger
          port: 16686
