observability/traefik/routes/otel-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otel
  namespace: observability
spec:
  parentRefs:
    - name: observability
  hostnames:
    - otel.benuino.eu.org
  rules:
    - backendRefs:
        - name: otel-collector-opentelemetry-collector
          port: 4318
